--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 #RewriteCond %{REQUEST_FILENAME} !-d
 #RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteRule ^ http://https://getafemean.github.io//index.html [QSA,L]
+#RewriteRule ^ https://getafemean.github.io/index.html [QSA,L]
 
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} -s [OR]
